# keri-sec

./: .gitignore  README.md  pyproject.toml
docs/: INSTALLATION_CREDENTIALS.md  cesr-transit-encoding-analysis.md  transit-keri-schema-synthesis.md
schemas/: stack_credential.json  staleness_policy_credential.json  test_execution_credential.json  workspace_credential.json
src/governed_stack/: __init__.py  cli.py  credential_handlers.py  manager.py  stacks.py  tel_anchoring.py  verification.py
src/governed_stack/keri/: __init__.py  registry.py  runtime.py
src/governed_stack/schemas/: installation_credential.json  lock_file.json
src/keri_sec/crosswalk/: __init__.py  derive_jwt.py  derive_sd_jwt.py  derive_w3c_vc.py  derive_x509.py  ingest_w3c_vc.py  loa_mapping.py  loss_report.py
src/keri_sec/testing/: __init__.py  conftest_plugin.py  execution_credential.py  policies.py  policy_engine.py  queries.py  reger_storage.py  smith_tree.py  staleness.py  suite_gaid.py  tel_bridge.py  test_attestation_doer.py
tests/: __init__.py  test_attack_scenarios.py  test_credential_handlers.py  test_crosswalk_derivations.py  test_crosswalk_ingestion.py  test_dogfood.py  test_governance_integration.py  test_loa_mapping.py  test_loss_report.py  test_manager.py  test_queries.py  test_refactor_sandbox.py  test_tel_bridge.py  test_test_attestation_doer.py  test_testing_conftest_plugin.py  test_testing_execution.py  test_testing_policies.py  test_testing_policy_engine.py  test_testing_smith_tree.py  test_testing_staleness.py  test_testing_suite_gaid.py
